--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
     margin: 0%;
     padding: 0%;
-    background-color: #def7c7;
+    background-color:#fef2f2;
 }
 
 .navbar-main-container {
-    background-color: #1A1A1A;
+    background-color:black;
     color: white;
     display: flex;
     justify-content: space-around;
@@ -34,4 +34,34 @@ body {
     display: flex;
     gap: 30px;
     cursor: pointer;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.item{
+    height: 250px;
+    width: 350px;
+    margin: 100px;
+    border: 1px solid rgb(181, 183, 184);
+    border-radius: 10px;
+    background-color:#ebc7c7;
+    text-align: center;
+}
+
+.login-signup-button{
+    background-color: lightblue;
+    padding: 6px 14px;
+    border-radius: 10px;
+    cursor: pointer;
+    border: #b9b6b6;
+    border:1px solid rgb(181, 183, 184)
+}
+
+.login-signup-button:hover{
+    background: #e3e3e3;
 }
